// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`findPlaceholders multiple paragraphs with multiple placeholders 1`] = `
Array [
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ user.name }}",
  },
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{movie.title | uppercase}}",
  },
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ movie.rating }}",
  },
]
`;

exports[`findPlaceholders table with placeholders 1`] = `
Array [
  Object {
    "position": Object {
      "end": NaN,
      "start": NaN,
    },
    "raw": "{{ user.name }}",
  },
]
`;
